# cann-rs

./: AGENT.md  Cargo.toml  README.md  constitution.md
.opencode/skills/spec-driven-development/: SKILL.md
cann/: Cargo.toml
cann-sys/: Cargo.toml  build.rs
cann-sys/src/: acl_base_rt.rs  acl_rt.rs  lib.rs
cann/src/: error.rs  lib.rs  main.rs  version.rs
docs/: version-detection.md
docs/specs/cann-sys-core/: plan.md  spec.md  tasks.md
